# backend/src/schemas/widget-version.schema.ts
@@ -1,0 +1,10 @@
+import { z } from 'zod';
+
+const uuidSchema = z.string().uuid();
+
+export const widgetVersionParamsSchema = z.object({
+  id: uuidSchema,
+  versionId: uuidSchema,
+});
+
+export type WidgetVersionParams = z.infer<typeof widgetVersionParamsSchema>;
